// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PWM_DISPLAY correctly with default value to N/A 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "PWM_DISPLAY",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <DisplayMultipleValue
    items={
      Array [
        Object {
          "name": "Value",
          "value": "N/A",
        },
        Object {
          "name": "Period",
          "value": "N/A",
        },
      ]
    }
  >
    <DisplayMultipleValue__Container>
      <div
        className="DisplayMultipleValue__Container-emGSTk bcIInJ"
      >
        <div>
          <P
            color="grayBase"
          >
            <Component
              className="P__P-KJbCR hrSHif"
              color="grayBase"
            >
              <p
                className="P__P-KJbCR hrSHif"
                color="grayBase"
              >
                Value
              </p>
            </Component>
          </P>
          <DisplayMultipleValue__StyledHeading
            color="primary"
          >
            <Heading
              className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL"
              color="primary"
              level={1}
            >
              <H
                className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                color="primary"
                level={1}
              >
                <h1
                  className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                  color="primary"
                >
                  N/A
                </h1>
              </H>
            </Heading>
          </DisplayMultipleValue__StyledHeading>
        </div>
        <div>
          <P
            color="grayBase"
          >
            <Component
              className="P__P-KJbCR hrSHif"
              color="grayBase"
            >
              <p
                className="P__P-KJbCR hrSHif"
                color="grayBase"
              >
                Period
              </p>
            </Component>
          </P>
          <DisplayMultipleValue__StyledHeading
            color="primary"
          >
            <Heading
              className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL"
              color="primary"
              level={1}
            >
              <H
                className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                color="primary"
                level={1}
              >
                <h1
                  className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                  color="primary"
                >
                  N/A
                </h1>
              </H>
            </Heading>
          </DisplayMultipleValue__StyledHeading>
        </div>
      </div>
    </DisplayMultipleValue__Container>
  </DisplayMultipleValue>
</DataChannelAdapter>
`;

exports[`should render PWM_DISPLAY correctly with max 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "PWM_DISPLAY",
      "values": Object {
        "period": 1,
        "value": 100,
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayMultipleValue
    items={
      Array [
        Object {
          "name": "Value",
          "value": 100,
        },
        Object {
          "name": "Period",
          "value": 1,
        },
      ]
    }
  >
    <DisplayMultipleValue__Container>
      <div
        className="DisplayMultipleValue__Container-emGSTk bcIInJ"
      >
        <div>
          <P
            color="grayBase"
          >
            <Component
              className="P__P-KJbCR hrSHif"
              color="grayBase"
            >
              <p
                className="P__P-KJbCR hrSHif"
                color="grayBase"
              >
                Value
              </p>
            </Component>
          </P>
          <DisplayMultipleValue__StyledHeading
            color="primary"
          >
            <Heading
              className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL"
              color="primary"
              level={1}
            >
              <H
                className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                color="primary"
                level={1}
              >
                <h1
                  className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                  color="primary"
                >
                  100
                </h1>
              </H>
            </Heading>
          </DisplayMultipleValue__StyledHeading>
        </div>
        <div>
          <P
            color="grayBase"
          >
            <Component
              className="P__P-KJbCR hrSHif"
              color="grayBase"
            >
              <p
                className="P__P-KJbCR hrSHif"
                color="grayBase"
              >
                Period
              </p>
            </Component>
          </P>
          <DisplayMultipleValue__StyledHeading
            color="primary"
          >
            <Heading
              className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL"
              color="primary"
              level={1}
            >
              <H
                className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                color="primary"
                level={1}
              >
                <h1
                  className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                  color="primary"
                >
                  1
                </h1>
              </H>
            </Heading>
          </DisplayMultipleValue__StyledHeading>
        </div>
      </div>
    </DisplayMultipleValue__Container>
  </DisplayMultipleValue>
</DataChannelAdapter>
`;

exports[`should render PWM_DISPLAY correctly with zero 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "PWM_DISPLAY",
      "values": Object {
        "period": 0,
        "value": 0,
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayMultipleValue
    items={
      Array [
        Object {
          "name": "Value",
          "value": 0,
        },
        Object {
          "name": "Period",
          "value": 0,
        },
      ]
    }
  >
    <DisplayMultipleValue__Container>
      <div
        className="DisplayMultipleValue__Container-emGSTk bcIInJ"
      >
        <div>
          <P
            color="grayBase"
          >
            <Component
              className="P__P-KJbCR hrSHif"
              color="grayBase"
            >
              <p
                className="P__P-KJbCR hrSHif"
                color="grayBase"
              >
                Value
              </p>
            </Component>
          </P>
          <DisplayMultipleValue__StyledHeading
            color="primary"
          >
            <Heading
              className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL"
              color="primary"
              level={1}
            >
              <H
                className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                color="primary"
                level={1}
              >
                <h1
                  className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                  color="primary"
                >
                  0
                </h1>
              </H>
            </Heading>
          </DisplayMultipleValue__StyledHeading>
        </div>
        <div>
          <P
            color="grayBase"
          >
            <Component
              className="P__P-KJbCR hrSHif"
              color="grayBase"
            >
              <p
                className="P__P-KJbCR hrSHif"
                color="grayBase"
              >
                Period
              </p>
            </Component>
          </P>
          <DisplayMultipleValue__StyledHeading
            color="primary"
          >
            <Heading
              className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL"
              color="primary"
              level={1}
            >
              <H
                className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                color="primary"
                level={1}
              >
                <h1
                  className="DisplayMultipleValue__StyledHeading-fVnwQZ kDmihL Heading__Heading-bbmQNS qIgcJ"
                  color="primary"
                >
                  0
                </h1>
              </H>
            </Heading>
          </DisplayMultipleValue__StyledHeading>
        </div>
      </div>
    </DisplayMultipleValue__Container>
  </DisplayMultipleValue>
</DataChannelAdapter>
`;
